# enumerator

./: CMakeLists.txt  Config.cmake.in  DockerTestFile  README.md  main.cpp
.github/workflows/: BuildAndTest.yml
src/: CMakeLists.txt  enumerator.cpp  enumerator.hpp  generator.hpp  reporter.hpp
src/enumerations/: CMakeLists.txt  enumeration.hpp  list.cpp  list.hpp  range.cpp  range.hpp
src/generators/: CMakeLists.txt  fileTemplateGenerator.cpp  fileTemplateGenerator.hpp  templateGenerator.cpp  templateGenerator.hpp
src/reporters/: CMakeLists.txt  fileReporter.cpp  fileReporter.hpp  streamReporter.cpp  streamReporter.hpp
tests/: CMakeLists.txt  enumeratorTests.cpp  mocks.hpp
tests/enumerations/: CMakeLists.txt  listTests.cpp  rangeTests.cpp
tests/generators/: CMakeLists.txt  fileTemplateGeneratorTests.cpp  templateGeneratorTests.cpp
tests/reporters/: CMakeLists.txt  fileReporterTests.cpp  streamReporterTests.cpp
